--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18.3.1",
